[tool.poetry]
name = "misc_scripts"
version = "0.1.0"
description = ""
authors = ["Tyler Baur <tbaur@teuteberg.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
xlsxwriter = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
