[tool.poetry]
name = "misc-scripts"
version = "0.1.0"
description = ""
authors = ["Tyler Baur <tbaur@teuteberg.com>"]
readme = "README.md"
packages = [{include = "misc_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
PyPDF2 = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
